--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -27,6 +27,8 @@ LICENSE file.
   <artifactId>ycsb</artifactId>
   <name>YCSB Release Distribution Builder</name>
   <packaging>pom</packaging>
+  <version>0.18.0-SNAPSHOT</version>
+
 
   <description>
     This module creates the release package of the YCSB with all DB library bindings.
@@ -37,8 +39,9 @@ LICENSE file.
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>core</artifactId>
-      <version>${project.version}</version>
+      <version>0.18.0-SNAPSHOT</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>accumulo1.9-binding</artifactId>
@@ -154,11 +157,13 @@ LICENSE file.
       <artifactId>infinispan-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
+    -->
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>jdbc-binding</artifactId>
-      <version>${project.version}</version>
+      <version>0.18.0-SNAPSHOT</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>kudu-binding</artifactId>
@@ -169,21 +174,25 @@ LICENSE file.
       <artifactId>memcached-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>maprdb-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>maprjsondb-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
+    -->
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>mongodb-binding</artifactId>
-      <version>${project.version}</version>
+      <version>0.18.0-SNAPSHOT</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>nosqldb-binding</artifactId>
@@ -194,11 +203,14 @@ LICENSE file.
       <artifactId>orientdb-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
+    -->
+
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>postgrenosql-binding</artifactId>
-      <version>${project.version}</version>
+      <version>0.18.0-SNAPSHOT</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>rados-binding</artifactId>
@@ -209,41 +221,46 @@ LICENSE file.
       <artifactId>redis-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>rest-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>site.ycsb</groupId>
-      <artifactId>riak-binding</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>site.ycsb</groupId>
-      <artifactId>rocksdb-binding</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>site.ycsb</groupId>
-      <artifactId>s3-binding</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>site.ycsb</groupId>
-      <artifactId>seaweedfs-binding</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>site.ycsb</groupId>
-      <artifactId>scylla-binding</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>site.ycsb</groupId>
-      <artifactId>solr7-binding</artifactId>
-      <version>${project.version}</version>
-    </dependency>
+-->
+    <!--
+   <dependency>
+     <groupId>site.ycsb</groupId>
+     <artifactId>riak-binding</artifactId>
+     <version>${project.version}</version>
+   </dependency>
+   <dependency>
+     <groupId>site.ycsb</groupId>
+     <artifactId>rocksdb-binding</artifactId>
+     <version>${project.version}</version>
+   </dependency>
+   <dependency>
+     <groupId>site.ycsb</groupId>
+     <artifactId>s3-binding</artifactId>
+     <version>${project.version}</version>
+   </dependency>
+   <dependency>
+     <groupId>site.ycsb</groupId>
+     <artifactId>seaweedfs-binding</artifactId>
+     <version>${project.version}</version>
+   </dependency>
+   <dependency>
+     <groupId>site.ycsb</groupId>
+     <artifactId>scylla-binding</artifactId>
+     <version>${project.version}</version>
+   </dependency>
+
+   <dependency>
+     <groupId>site.ycsb</groupId>
+     <artifactId>solr7-binding</artifactId>
+     <version>${project.version}</version>
+   </dependency>
+
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>tarantool-binding</artifactId>
@@ -259,10 +276,11 @@ LICENSE file.
        <artifactId>voltdb-binding</artifactId>
        <version>${project.version}</version>
      </dependency>
+      -->
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>zookeeper-binding</artifactId>
-      <version>${project.version}</version>
+      <version>0.18.0-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
