--- a/mongodb/pom.xml
+++ b/mongodb/pom.xml
@@ -39,25 +39,31 @@ LICENSE file.
     <dependency>
       <groupId>com.allanbank</groupId>
       <artifactId>mongodb-async-driver</artifactId>
-      <version>${mongodb.async.version}</version>
+      <version>2.0.1</version>
+      <scope>system</scope>
+      <!--
+      <systemPath>${myPath}</systemPath>
+      -->
+      <systemPath>/Users/rustam/.m2/repository/com/allanbank/mongodb-async-driver/2.0.1/mongodb-async-driver-2.0.1.jar</systemPath>
+
     </dependency>
     <dependency>
       <groupId>site.ycsb</groupId>
       <artifactId>core</artifactId>
-      <version>${project.version}</version>
+      <version>0.18.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.1.2</version>
+      <version>1.2.11</version>
       <scope>runtime</scope>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
