--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,9 @@ LICENSE file.
 
   <groupId>site.ycsb</groupId>
   <artifactId>root</artifactId>
-  <version>0.18.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <version>0.18.0-SNAPSHOT</version>
+
 
   <name>YCSB Root</name>
 
@@ -132,7 +133,7 @@ LICENSE file.
     <ignite.version>2.7.6</ignite.version>
     <infinispan.version>7.2.2.Final</infinispan.version>
     <kudu.version>1.11.1</kudu.version>
-    <maprhbase.version>1.1.8-mapr-1710</maprhbase.version>
+    <!--<maprhbase.version>1.1.8-mapr-1710</maprhbase.version>-->
     <mongodb.version>3.11.0</mongodb.version>
     <mongodb.async.version>2.0.1</mongodb.async.version>
     <openjpa.jdbc.version>2.1.1</openjpa.jdbc.version>
@@ -144,12 +145,13 @@ LICENSE file.
     <s3.version>1.10.20</s3.version>
     <seaweed.client.version>1.4.1</seaweed.client.version>
     <scylla.cql.version>3.10.2-scylla-1</scylla.cql.version>
-    <solr7.version>7.7.2</solr7.version>
+    <!--<solr7.version>7.7.2</solr7.version>-->
     <tarantool.version>1.6.5</tarantool.version>
     <thrift.version>0.8.0</thrift.version>
     <tablestore.version>4.8.0</tablestore.version>
     <voltdb.version>10.1.1</voltdb.version>
     <zookeeper.version>3.5.8</zookeeper.version>
+    <myPath>/Users/rustam/.m2/repository/com/allanbank/mongodb-async-driver/2.0.1/mongodb-async-driver-2.0.1.jar</myPath>
   </properties>
 
   <modules>
@@ -158,6 +160,8 @@ LICENSE file.
     <module>binding-parent</module>
     <module>distribution</module>
     <!-- all the datastore bindings, lex sorted please -->
+
+    <!--
     <module>accumulo1.9</module>
     <module>aerospike</module>
     <module>arangodb</module>
@@ -181,15 +185,23 @@ LICENSE file.
     <module>hbase2</module>
     <module>ignite</module>
     <module>infinispan</module>
+    -->
     <module>jdbc</module>
+    <!--
     <module>kudu</module>
-    <module>maprdb</module>
-    <module>maprjsondb</module>
+    -->
+    <!--<module>maprdb</module>-->
+   <!-- <module>maprjsondb</module>-->
+    <!--
     <module>memcached</module>
+    -->
     <module>mongodb</module>
+    <!--
     <module>nosqldb</module>
     <module>orientdb</module>
+   -->
     <module>postgrenosql</module>
+    <!--
     <module>rados</module>
     <module>redis</module>
     <module>rest</module>
@@ -198,42 +210,45 @@ LICENSE file.
     <module>s3</module>
     <module>seaweedfs</module>
     <module>scylla</module>
-    <module>solr7</module>
-    <module>tarantool</module>
-    <module>tablestore</module>
-    <module>voltdb</module>
-    <module>zookeeper</module>
-  </modules>
+    -->
+    <!--<module>solr7</module>-->
+    <!--
+   <module>tarantool</module>
+   <module>tablestore</module>
+   <module>voltdb</module>
+   -->
+   <module>zookeeper</module>
+ </modules>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.16</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M1</version>
-        <executions>
-          <execution>
-            <id>enforce-maven</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <requireMavenVersion>
-                  <!--
-                  Maven 3.6.2 has issues
-                  https://github.com/brianfrankcooper/YCSB/issues/1390
-                  -->
-                  <version>[3.1.0,3.6.2),(3.6.2,)</version>
+ <build>
+   <pluginManagement>
+     <plugins>
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-checkstyle-plugin</artifactId>
+         <version>2.16</version>
+       </plugin>
+     </plugins>
+   </pluginManagement>
+   <plugins>
+     <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-enforcer-plugin</artifactId>
+       <version>3.0.0-M1</version>
+       <executions>
+         <execution>
+           <id>enforce-maven</id>
+           <goals>
+             <goal>enforce</goal>
+           </goals>
+           <configuration>
+             <rules>
+               <requireMavenVersion>
+                 <!--
+                 Maven 3.6.2 has issues
+                 https://github.com/brianfrankcooper/YCSB/issues/1390
+                 -->
+                  <version>3.6.1</version>
                 </requireMavenVersion>
               </rules>
             </configuration>
@@ -288,7 +303,7 @@ LICENSE file.
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -301,7 +316,7 @@ LICENSE file.
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.1.1</version>
+            <version>3.3.1</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
