--- a/zookeeper/pom.xml
+++ b/zookeeper/pom.xml
@@ -33,7 +33,7 @@ LICENSE file.
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
-      <version>${zookeeper.version}</version>
+      <version>3.5.8</version>
     </dependency>
     <dependency>
       <groupId>site.ycsb</groupId>
@@ -46,17 +46,23 @@ LICENSE file.
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
       <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.10</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.21</version>
+      <version>1.7.25</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -73,6 +79,12 @@ LICENSE file.
       <artifactId>curator-test</artifactId>
       <version>4.2.0</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.zookeeper</groupId>
+          <artifactId>zookeeper</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
